# micro-indiverse

./: README.md
client-core/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client-core/src/: index.ts
client-core/src/interop/: conversion.ts
client-core/src/types/: data.ts  messages.ts  mod.ts
server/: Cargo.toml
web-client-view/: package.json  pnpm-lock.yaml  tsconfig.json
web-client-view/locales/: en.json
web-client-view/src/: App.tsx  main.tsx
web-client-view/src/Components/: MessagesHistory.tsx  SendMessageBox.tsx
web-client-view/src/atoms/: messagesAtom.ts
web-client-view/src/features/: updateMessage.ts
web-client-view/src/settings/: db.ts  translation.ts
